@@ -226,7 +226,7 @@ public class OpenCDXIAMProviderServiceImpl implements OpenCDXIAMProviderService 
                         && openCDXDtoNpiJsonResponse.getResults() != null
                         && !openCDXDtoNpiJsonResponse.getResults().isEmpty()) {
                     openCDXIAMProviderModel = new OpenCDXIAMProviderModel(
-                            openCDXDtoNpiJsonResponse.getResults().get(0), openCDXCountryRepository);
+                            openCDXDtoNpiJsonResponse.getResults().getFirst(), openCDXCountryRepository);
                     openCDXIAMProviderModel = this.openCDXIAMProviderRepository.save(openCDXIAMProviderModel);
                     loadProviderPiiCreated(request, openCDXIAMProviderModel);
                     return LoadProviderResponse.newBuilder()
